# breastcancer-kan

./: .gitignore  ANALISIS_COSTOS.md  ANALISIS_RESULTADOS_DETALLADO.md  DOCUMENTACION_TECNICA.md  KAN_Wisconsin_BreastCancer.ipynb  README.md  Wave_vs_Chebyshev_KAN_Analysis.ipynb  check_environment.py  kan_results_export.json  pyproject.toml
