[project]
name = "variantes-kans"
version = "0.1.0"
description = "Implementación de diferentes variantes de Kolmogorov-Arnold Networks (KAN) para imágenes médicas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
]

[tool.uv]
package = false
